file changed by sharvan sa

--- a/dbms.html
+++ b/dbms.html
@@ -4,27 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      body {
-        background-color: #ebf5df;
-
-        /* background: radial-gradient(circle,rgba(63, 94, 251, 1) 0%, rgba(252, 70, 107, 1) 100%); */
-      }
-      .con {
-        height: 50vh;
-        width: 100vw;
-
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="con">
       <iframe
-        width="560"
-        height="315"
+        width="960"
+        height="515"
         src="https://www.youtube.com/embed/dl00fOOYLOM?si=FG6yKMS1JoeUNlP3"
         title="YouTube video player"
         frameborder="0"
@@ -32,6 +18,31 @@
         referrerpolicy="strict-origin-when-cross-origin"
         allowfullscreen
       ></iframe>
+      <ul>
+        <h2>Things You Will Learn In This Course</h2>
+
+        <br />
+
+        <li>Introduction</li>
+        <li>What is DBMS?</li>
+        <li>DBMS Architecture and DBA</li>
+        <li>ER Model</li>
+        <li>Extended ER Features</li>
+        <li>How to Think and Formulate ER Diagram</li>
+        <li>Designing ER Model of Facebook</li>
+        <li>Relation Model</li>
+        <li>ER Model to Relational Model</li>
+        <li>Normalisation</li>
+        <li>ACID Properties and Transactions</li>
+        <li>Atomicity Implementation</li>
+        <li>Indexing in DBMS</li>
+        <li>NoSQL vs SQL DB</li>
+        <li>Types of Database</li>
+        <li>Clustering/Replication in DBMS</li>
+        <li>Partitioning and Sharding in DBMS</li>
+        <li>CAP Theorem</li>
+        <li>Master Slave Architecture</li>
+      </ul>
     </div>
   </body>
 </html>
