--- a/excel.html
+++ b/excel.html
@@ -1,13 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="con">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/LmWRlewg43M?si=YEi6rHuykmCM1V3c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe
+        width="960"
+        height="515"
+        src="https://www.youtube.com/embed/LmWRlewg43M?si=YEi6rHuykmCM1V3c"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen
+      ></iframe>
+      <ul>
+        <h2>Things You Will Learn In This Course</h2>
+
+        <br>
+
+        <li>Excel Introduction</li>
+        <li>Data Entry in Excel</li>
+        <li>Excel Formula and Function</li>
+        <li>Conditional Formatting in Excel</li>
+        <li>Tables in Excel</li>
+        <li>Filter and Sort in Excel</li>
+        <li>IF Formula in Excel</li>
+        <li>Insert Chart in Excel</li>
+        <li>Home Tab in Excel</li>
+        <li>Print in Excel</li>
+        <li>Pivot in Excel</li>
+        <li>Slicer in Pivot in Excel</li>
+        <li>Pivot Chart in Excel</li>
+        <li>Options in Pivot in Excel</li>
+        <li>Timeline in Pivot in Excel</li>
+        <li>Clear Filter in Pivot in Excel</li>
+        <li>31 Most Useful Formulas in Excel</li>
+        <li>VLOOKUP Formula explained in detail in Excel</li>
+        <li>Pro Printing Tips in Excel</li>
+      </ul>
     </div>
-</body>
+  </body>
 </html>
