--- a/operating.html
+++ b/operating.html
@@ -1,28 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-              body{
-            background-color: #EBF5DF;
-
-/* background: radial-gradient(circle,rgba(63, 94, 251, 1) 0%, rgba(252, 70, 107, 1) 100%); */
-        }
-        .con{
-            height:50vh;
-            width:100vw;
-
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-    </style>
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="con">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/3obEP8eLsCw?si=uaCWI_H4zDB_OEJR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe
+        width="960"
+        height="515"
+        src="https://www.youtube.com/embed/3obEP8eLsCw?si=uaCWI_H4zDB_OEJR"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen
+      ></iframe>
+      <ul>
+        <h2>Things You Will Learn In This Course</h2>
+
+        <br />
+
+        <li>Introduction</li>
+        <li>What is an operating system?</li>
+        <li>Types of operating system</li>
+        <li>Multitasking vs Multi threading</li>
+        <li>Components of operating system</li>
+        <li>System call in operating system</li>
+        <li>How Operating System boots up?</li>
+        <li>Difference between 32 bit & 64 bit operating system</li>
+        <li>Comparison between different storages used in computers</li>
+        <li>How OS creates process?</li>
+        <li>What are the different process states in OS?</li>
+        <li>Context Switching in OS</li>
+        <li>What is Convoy Effect?</li>
+        <li>
+          Shortest job algorithm, Priority scheduling, Round Robin CPU
+          scheduling
+        </li>
+        <li>
+          Multilevel Queue scheduling & Comparison between CPU scheduling
+          Algorithms
+        </li>
+        <li>What is Concurrency?</li>
+        <li>Critical Section problem</li>
+        <li>Conditional Variable & Semaphore to synchronise threads</li>
+        <li>Producer Consumer problem & Solution</li>
+        <li>Reader Writer Problem and Solution</li>
+        <li>The Dining Philosophers problem and its solution</li>
+        <li>What is Deadlock?</li>
+        <li>Deadlock avoidance & its detection and recovery</li>
+        <li>Solving LC problems on Concurrency</li>
+        <li>Memory Management in OS</li>
+        <li>How OS manages free space?</li>
+        <li>What is Paging?</li>
+        <li>What is Segmentation?</li>
+        <li>What is Virtual Memory?</li>
+        <li>Page replacement algorithms</li>
+        <li>What is Thrashing?</li>
+        <li>Solving LC problems on Concurrency</li>
+      </ul>
     </div>
-</body>
+  </body>
 </html>
