--- a/networking.html
+++ b/networking.html
@@ -4,34 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-      *{
-        padding: 0;
-        margin: 0;
-      }
-        body{
-            background-color: #EBF5DF;
-            /* background: radial-gradient(circle,rgba(63, 94, 251, 1) 0%, rgba(252, 70, 107, 1) 100%); */
-
-        }
-        .con{
-            height:100%;
-            width:100%;
-            display: flex;
-            /* align-items: center; */
-            /* justify-content: center; */
-            column-gap: 30px;
-        }
-        li:hover{
-            font-weight: bolder;
-        }
-        li{
-            padding: 8px;
-        }
-        iframe{
-                border-radius: 20px;
-        }
-    </style>
+    
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="con">
