--- a/oops.html
+++ b/oops.html
@@ -4,25 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-          body{
-            background-color: #EBF5DF;
-
-/* background: radial-gradient(circle,rgba(63, 94, 251, 1) 0%, rgba(252, 70, 107, 1) 100%); */
-        }
-        .con{
-            height:50vh;
-            width:100vw;
-
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
+    <link rel="stylesheet" href="style.css">
     </style>
 </head>
 <body>
     <div class="con">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/a199KZGMNxk?si=WXgFg2E7AKPvwWU3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="960" height="515" src="https://www.youtube.com/embed/a199KZGMNxk?si=WXgFg2E7AKPvwWU3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <ul>
+            <h2>Things You Will Learn In This Course</h2>
+        
+        <br>
+        
+        <li>Introduction</li>
+        <li>Overview</li>
+        <li>Classes & Objects</li>
+        <li>Methods</li>
+        <li>Polymorphism</li>
+        <li>Constructors</li>
+        <li>Static keyword</li>
+        <li>This keyword</li>
+        <li>Inheritance</li>
+        <li>Encapsulation</li>
+        <li>Abstraction</li>
+        <li>Abstract keyword</li>
+        <li>Interfaces</li>
+        </ul>
     </div>
 </body>
 </html>
