all scroller are added

--- a/dbms.html
+++ b/dbms.html
@@ -18,31 +18,33 @@
         referrerpolicy="strict-origin-when-cross-origin"
         allowfullscreen
       ></iframe>
-      <ul>
-        <h2>Things You Will Learn In This Course</h2>
+      <div class="scroller">
+        <ul>
+          <h2>Things You Will Learn In This Course</h2>
 
-        <br />
+          <br />
 
-        <li>Introduction</li>
-        <li>What is DBMS?</li>
-        <li>DBMS Architecture and DBA</li>
-        <li>ER Model</li>
-        <li>Extended ER Features</li>
-        <li>How to Think and Formulate ER Diagram</li>
-        <li>Designing ER Model of Facebook</li>
-        <li>Relation Model</li>
-        <li>ER Model to Relational Model</li>
-        <li>Normalisation</li>
-        <li>ACID Properties and Transactions</li>
-        <li>Atomicity Implementation</li>
-        <li>Indexing in DBMS</li>
-        <li>NoSQL vs SQL DB</li>
-        <li>Types of Database</li>
-        <li>Clustering/Replication in DBMS</li>
-        <li>Partitioning and Sharding in DBMS</li>
-        <li>CAP Theorem</li>
-        <li>Master Slave Architecture</li>
-      </ul>
+          <li>Introduction</li>
+          <li>What is DBMS?</li>
+          <li>DBMS Architecture and DBA</li>
+          <li>ER Model</li>
+          <li>Extended ER Features</li>
+          <li>How to Think and Formulate ER Diagram</li>
+          <li>Designing ER Model of Facebook</li>
+          <li>Relation Model</li>
+          <li>ER Model to Relational Model</li>
+          <li>Normalisation</li>
+          <li>ACID Properties and Transactions</li>
+          <li>Atomicity Implementation</li>
+          <li>Indexing in DBMS</li>
+          <li>NoSQL vs SQL DB</li>
+          <li>Types of Database</li>
+          <li>Clustering/Replication in DBMS</li>
+          <li>Partitioning and Sharding in DBMS</li>
+          <li>CAP Theorem</li>
+          <li>Master Slave Architecture</li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
