--- a/excel.html
+++ b/excel.html
@@ -18,31 +18,33 @@
         referrerpolicy="strict-origin-when-cross-origin"
         allowfullscreen
       ></iframe>
-      <ul>
-        <h2>Things You Will Learn In This Course</h2>
+      <div class="scroller">
+        <ul>
+          <h2>Things You Will Learn In This Course</h2>
 
-        <br>
+          <br />
 
-        <li>Excel Introduction</li>
-        <li>Data Entry in Excel</li>
-        <li>Excel Formula and Function</li>
-        <li>Conditional Formatting in Excel</li>
-        <li>Tables in Excel</li>
-        <li>Filter and Sort in Excel</li>
-        <li>IF Formula in Excel</li>
-        <li>Insert Chart in Excel</li>
-        <li>Home Tab in Excel</li>
-        <li>Print in Excel</li>
-        <li>Pivot in Excel</li>
-        <li>Slicer in Pivot in Excel</li>
-        <li>Pivot Chart in Excel</li>
-        <li>Options in Pivot in Excel</li>
-        <li>Timeline in Pivot in Excel</li>
-        <li>Clear Filter in Pivot in Excel</li>
-        <li>31 Most Useful Formulas in Excel</li>
-        <li>VLOOKUP Formula explained in detail in Excel</li>
-        <li>Pro Printing Tips in Excel</li>
-      </ul>
+          <li>Excel Introduction</li>
+          <li>Data Entry in Excel</li>
+          <li>Excel Formula and Function</li>
+          <li>Conditional Formatting in Excel</li>
+          <li>Tables in Excel</li>
+          <li>Filter and Sort in Excel</li>
+          <li>IF Formula in Excel</li>
+          <li>Insert Chart in Excel</li>
+          <li>Home Tab in Excel</li>
+          <li>Print in Excel</li>
+          <li>Pivot in Excel</li>
+          <li>Slicer in Pivot in Excel</li>
+          <li>Pivot Chart in Excel</li>
+          <li>Options in Pivot in Excel</li>
+          <li>Timeline in Pivot in Excel</li>
+          <li>Clear Filter in Pivot in Excel</li>
+          <li>31 Most Useful Formulas in Excel</li>
+          <li>VLOOKUP Formula explained in detail in Excel</li>
+          <li>Pro Printing Tips in Excel</li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
