--- a/versionctrl.html
+++ b/versionctrl.html
@@ -18,54 +18,58 @@
         referrerpolicy="strict-origin-when-cross-origin"
         allowfullscreen
       ></iframe>
-      <ul>
-        <h2>Things You Will Learn In This Course</h2>
+      <div class="scroller">
+        <ul>
+          <h2>Things You Will Learn In This Course</h2>
 
-        <br />
+          <br />
 
-        <li>Introduction</li>
-        <li>What is Git and Github?</li>
-        <li>Why are we using Git and Github?</li>
-        <li>Downloading Git</li>
-        <li>Structure of the Tutorial</li>
-        <li>Some basic Linux commands</li>
-        <li>Initializing a Git Repository</li>
-        <li>Making the first change</li>
-        <li>Staging the first change</li>
-        <li>Commiting the first change</li>
-        <li>Adding data to files</li>
-        <li>Removing changes from stage</li>
-        <li>Viewing the overall history of the project</li>
-        <li>Making few more commits</li>
-        <li>Removing a commit from the history of a project</li>
-        <li>Stashing changes</li>
-        <li>Popping Stash</li>
-        <li>Clearing Stash</li>
-        <li>Starting Github</li>
-        <li>Creating a new repository on Github</li>
-        <li>Connecting Remote Repository to Local Repository</li>
-        <li>Pushing local changes to remote repository</li>
-        <li>What are branches?</li>
-        <li>Use of branches</li>
-        <li>Making a new branch and switching to it (Learn Git Branching)</li>
-        <li>Merging branch to main (Learn Git Branching)</li>
-        <li>Pushing new changes to master branch</li>
-        <li>Working with Existing Projects</li>
-        <li>Why Fork and How to Fork?</li>
-        <li>Cloning the forked project to local</li>
-        <li>What is Upstream and adding it to local</li>
-        <li>What is a Pull Request?</li>
-        <li>Never commit on main branch & creating our first pull request</li>
-        <li>Removing a commit from the pull request by force pushing to it</li>
-        <li>Merging a Pull Request</li>
-        <li>Making forked project even with main project</li>
-        <li>Instructions on how to try doing these on your own</li>
-        <li>Squashing commits</li>
-        <li>Using the Rebase command</li>
-        <li>Using the hard flag to reset</li>
-        <li>Merge conflicts and how to resolve them?</li>
-        <li>What to do next?</li>
-      </ul>
+          <li>Introduction</li>
+          <li>What is Git and Github?</li>
+          <li>Why are we using Git and Github?</li>
+          <li>Downloading Git</li>
+          <li>Structure of the Tutorial</li>
+          <li>Some basic Linux commands</li>
+          <li>Initializing a Git Repository</li>
+          <li>Making the first change</li>
+          <li>Staging the first change</li>
+          <li>Commiting the first change</li>
+          <li>Adding data to files</li>
+          <li>Removing changes from stage</li>
+          <li>Viewing the overall history of the project</li>
+          <li>Making few more commits</li>
+          <li>Removing a commit from the history of a project</li>
+          <li>Stashing changes</li>
+          <li>Popping Stash</li>
+          <li>Clearing Stash</li>
+          <li>Starting Github</li>
+          <li>Creating a new repository on Github</li>
+          <li>Connecting Remote Repository to Local Repository</li>
+          <li>Pushing local changes to remote repository</li>
+          <li>What are branches?</li>
+          <li>Use of branches</li>
+          <li>Making a new branch and switching to it (Learn Git Branching)</li>
+          <li>Merging branch to main (Learn Git Branching)</li>
+          <li>Pushing new changes to master branch</li>
+          <li>Working with Existing Projects</li>
+          <li>Why Fork and How to Fork?</li>
+          <li>Cloning the forked project to local</li>
+          <li>What is Upstream and adding it to local</li>
+          <li>What is a Pull Request?</li>
+          <li>Never commit on main branch & creating our first pull request</li>
+          <li>
+            Removing a commit from the pull request by force pushing to it
+          </li>
+          <li>Merging a Pull Request</li>
+          <li>Making forked project even with main project</li>
+          <li>Instructions on how to try doing these on your own</li>
+          <li>Squashing commits</li>
+          <li>Using the Rebase command</li>
+          <li>Using the hard flag to reset</li>
+          <li>Merge conflicts and how to resolve them?</li>
+          <li>What to do next?</li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
