--- a/oops.html
+++ b/oops.html
@@ -10,6 +10,7 @@
 <body>
     <div class="con">
         <iframe width="960" height="515" src="https://www.youtube.com/embed/a199KZGMNxk?si=WXgFg2E7AKPvwWU3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <div class="scroller">
         <ul>
             <h2>Things You Will Learn In This Course</h2>
         
@@ -29,6 +30,7 @@
         <li>Abstract keyword</li>
         <li>Interfaces</li>
         </ul>
+        </div>
     </div>
 </body>
 </html>
